--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,20 +19,35 @@ img {
   padding: 16px;
 }
 
-.contact-app h1 {
+.contact-app__header {
+  display: flex;
+  align-items: center;
+  padding: 32px 0;
+}
+
+.contact-app__header h1 {
   font-weight: normal;
-  font-size: 48px;
-  margin-bottom: 32px;
+  font-size: 32px;
+  flex: 1;
+}
+
+.navigation ul li {
+  display: inline-block;
+  padding: 16px;
+}
+
+.navigation ul li a {
+  font-size: 28px;
+  color: black;
 }
 
 .contact-item {
   display: flex;
   align-items: center;
   margin: 24px 0;
-  border: 1px dashed black;
+  border: 2px dashed black;
   padding: 16px;
   border-radius: 8px;
-  box-shadow: 5px 5px 6px 2px rgba(0, 0, 0, 0.2);
 }
 
 .contact-item__image img {
@@ -56,22 +71,22 @@ img {
 }
 
 .contact-item__delete {
-  padding: 8px 12px;
+  padding: 6px 10px;
   font-size: 18px;
-  background-color: crimson;
-  color: white;
-  border: 0;
+  font-weight: bold;
+  color: black;
+  background-color: transparent;
+  border: 3px solid black;
   border-radius: 50%;
   cursor: pointer;
 }
 
 .contact-input {
-  border: 1px dashed black;
+  border: 2px dashed black;
   padding: 16px;
   margin: 14px 0;
   border-radius: 8px;
   margin-bottom: 32px;
-  box-shadow: 5px 5px 6px 2px rgba(0, 0, 0, 0.2);
 }
 
 .contact-input input {
@@ -86,4 +101,15 @@ img {
   width: 100%;
   padding: 8px;
   font-family: "Inter", sans-serif;
+}
+
+.search-bar {
+  display: block;
+  width: 100%;
+  margin: 16px 0;
+  padding: 12px;
+  background-color: transparent;
+  font-family: "Inter", sans-serif;
+  border: 2px dashed black;
+  border-radius: 4px;
 }
